--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,7 +1,13 @@
-<input type="text" [(ngModel)]="name">
-<p>{{ name }}</p>
-<h3>I'm in the AppComponent</h3>
-<hr>
-<app-server></app-server>
-<hr>
-<app-servers></app-servers>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <p>{{ name }}</p>
+      <input type="text" [(ngModel)]="name">
+      <h3>I'm in the AppComponent</h3>
+      <hr>
+      <app-server></app-server>
+      <hr>
+      <app-servers></app-servers>
+    </div>
+  </div>
+</div>
