--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -5,7 +5,7 @@
       <input type="text" [(ngModel)]="name">
       <h3>I'm in the AppComponent</h3>
       <hr>
-      <app-server></app-server>
+      <!-- <app-server></app-server> -->
       <hr>
       <app-servers></app-servers>
     </div>
