--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,1 +1,3 @@
-This is ServerComponent
+<h3>String Interpolation</h3>
+<p>{{ "Hi" }}, my name is {{personName}}, I work as a {{personOccupation}}, and I am {{getPersonAge()}} years old.</p>
+<hr>
