--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,3 +1,6 @@
 <p>This is ServersComponent created with Angular CLI</p>
-
+<hr>
+<h3>Property Binding</h3>
+<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button>
+<hr>
 <app-server></app-server>
