--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -2,5 +2,7 @@
 <hr>
 <h3>Property Binding</h3>
 <button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button>
+<p>{{allowNewServer}}</p>
+<p [innerText]="allowNewServer"></p>
 <hr>
 <app-server></app-server>
